--- a/main.css
+++ b/main.css
@@ -1,4 +1,11 @@
-
+div {
+  width: 100%;
+  height: 400px;
+  background-image: url('Logo.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+  border: 1px solid red;
+}
 h1 {
   color: white;
   text-align: center;
